--- a/Viz_Lit_Prelim_Analysis.Rmd
+++ b/Viz_Lit_Prelim_Analysis.Rmd
@@ -9,7 +9,7 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 
 if (!require("pacman")) install.packages("pacman")
-pacman::p_load(tidyverse, knitr
+pacman::p_load(tidyverse, knitr, ez, psychReport, superb, plotrix
                # knitr, rmarkdown, yaml, tidyverse, plyr, psych, foreign, stats, lme4,
                #              RColorBrewer, pals, car, ez, devtools, MBESS, apaTables, gridExtra, plyr,
                #              cowplot, Rmisc, afex, lsmeans, emmeans, ggsignif, effsize, TOSTER
@@ -48,39 +48,41 @@ sub_ids <- unique(first_six)
 
 length(sub_ids)
 
-states <- c("WaitingToReadyUp","ReadingQuestion","ProducingAnswer","WaitingToEnterAnswer")
-
 fast_RTs <- data.frame(ParticipantId = character(),
                        TrialName = character(),
                        type = character(),
                        time = numeric()
 )
 
-read_question_RTs <- list()
-begin_input_RTs <- list()
-
+rt_data <- NULL
 
 for (i in 1:length(sub_ids)){
-  # temp_hmd_file <- read.csv(paste0("Raw Data/", sub_ids[i], "_hmdandinputlog.csv"))
-  # 
-  # trial_names <- unique(temp_hmd_file$TrialName)
-  # 
-  # temp_hmd_file %>%
-  #   mutate(TrialName = fct_inorder(factor(TrialName)),
-  #     State = factor(State, levels = states)) %>%
-  #   group_by(TrialName, State) %>%
-  #   summarize(first_time = first(Time..ms.),
-  #             last_time = last(Time..ms.))
+
+  temp_main_file <- read_csv(paste0("Raw Data/", sub_ids[i], "_maindata.csv")) %>%
+    mutate(AnswerRT = TimeToBeginInput - TimeToReadQuestion)
   
-  temp_main_file <- read_csv(paste0("Raw Data/", sub_ids[i], "_maindata.csv"))
+  #three potential RTs to exclude by: 
+  ## total RT (reading + answering)
+  ## reading RT
+  ## answering RT (i'm thinking this one)
   
   if (any(temp_main_file$TimeToReadQuestion < 2000, na.rm = T)){
     which_index <- which(temp_main_file$TimeToReadQuestion < 2000)
     for (j in which_index){
       fast_RTs <- add_row(fast_RTs, ParticipantId = sub_ids[i],
                           TrialName = temp_main_file$TrialName[j],
-                          type = "TimeToReadQuestion",
+                          type = "ReadingRT",
                           time = temp_main_file$TimeToReadQuestion[j])
+    }
+  }
+  
+  if (any(temp_main_file$AnswerRT < 2000, na.rm = T)){
+    which_index <- which(temp_main_file$AnswerRT < 2000)
+    for (j in which_index){
+      fast_RTs <- add_row(fast_RTs, ParticipantId = sub_ids[i],
+                          TrialName = temp_main_file$TrialName[j],
+                          type = "AnswerRT",
+                          time = temp_main_file$AnswerRT[j])
     }
   }
   
@@ -89,41 +91,262 @@ for (i in 1:length(sub_ids)){
     for (j in which_index) {
       fast_RTs <- add_row(fast_RTs, ParticipantId = sub_ids[i],
                           TrialName = temp_main_file$TrialName[j],
-                          type = "TimeToBeginInput",
+                          type = "TotalRT",
                           time = temp_main_file$TimeToBeginInput[j])
     }
   }
   
-
-  read_question_RTs[[i]] <- as_tibble(matrix(temp_main_file$TimeToReadQuestion, 
-                                             nrow = 1, 
-                                             dimnames=list("",temp_main_file$TrialName))) %>%
-    add_column(Participant = temp_main_file$ParticipantId[1], 
-               Condition = temp_main_file$Condition[1], 
-               .before = "LineChartQ1")
-  
-  begin_input_RTs[[i]] <- as_tibble(matrix(temp_main_file$TimeToBeginInput, 
-                                             nrow = 1, 
-                                             dimnames=list("",temp_main_file$TrialName))) %>%
-    add_column(Participant = temp_main_file$ParticipantId[1], 
-               Condition = temp_main_file$Condition[1], 
-               .before = "LineChartQ1")
-  
+  rt_data <- rt_data %>%
+    bind_rows(temp_main_file)
   
 }
 
-read_question_RT <- bind_rows(read_question_RTs)
-begin_input_RT <- bind_rows(begin_input_RTs)
+rt_data <- rt_data %>%
+  rename(readRT = TimeToReadQuestion, totalRT = TimeToBeginInput)
 
-#look at RTs for reading question or for input that are < 2 sec
-kable(fast_RTs, caption = "Fast RTs")
+#read in trialtype key (I created this from an early version of the previous paper)
+trial_type_key <- read.csv("trial_type_key.csv", stringsAsFactors = F)
 
-#get means/SDs for RTs 
-mean_read_question_RTs <- read_question_RT %>%
-  summarise(across(LineChartQ1:SurfacePlotQ3, list(mean = mean, sd=sd)))
+rt_data <- rt_data %>%
+  mutate(TrialType = trial_type_key$TrialType[match(TrialName, trial_type_key$TrialName)]) %>%
+  mutate(TrialType = as.factor(TrialType))
 
-mean_begin_input_RTs
 
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+## Remove outliers
+
+```{r}
+
+dim(rt_data)[1]
+#122 participants, 17 trials
+122*17
+
+
+#remove answerRTs below 2000ms first
+rt_data_remove <- rt_data %>%
+  filter(AnswerRT >= 2000)
+dim(rt_data_remove)[1]
+#drops 7 trials
+
+rt_data_summary <- rt_data %>%
+  group_by(TrialName) %>%
+  summarize(meanAnswerRT = mean(AnswerRT, na.rm = T),
+            sdAnswerRT = sd(AnswerRT, na.rm = T),
+            UB = meanAnswerRT + 3*sdAnswerRT,
+            LB = meanAnswerRT - 3*sdAnswerRT)
+rt_data_summary
+
+rt_data_no_outliers <- rt_data_remove %>%
+  group_by(TrialName) %>%
+  filter((!(abs(AnswerRT - mean(AnswerRT)) > 3*sd(AnswerRT))))
+dim(rt_data_no_outliers)[1]
+#drops 47 more trials
+
+rt_data_no_outliers %>%
+  group_by(ParticipantId) %>%
+  summarize(ntrials = n()) %>%
+  with(hist(ntrials, breaks = 0:17))
+
+##maybe consider replacing outliers with means instead of removing them?
+
+```
+
+## Compare conditions using individual questions
+
+```{r}
+
+#compare read times (should be no differences of condition)
+#compare answer times (potentially a difference)
+
+# first, make .csv files in wide format to double check in statview
+read_rt_wider <- rt_data_no_outliers %>%
+  select(ParticipantId, Condition, TrialName, readRT) %>%
+  pivot_wider(names_from = TrialName,values_from = readRT) %>%
+  mutate(noutliers = rowSums(is.na(across(3:19))))
+
+answer_rt_wider <- rt_data_no_outliers %>%
+  select(ParticipantId, Condition, TrialName, AnswerRT) %>%
+  pivot_wider(names_from = TrialName,values_from = AnswerRT) %>%
+  mutate(noutliers = rowSums(is.na(across(3:19))),
+         mean_all = rowMeans(across(3:19), na.rm = T))
+
+write.csv(read_rt_wider, file = "readRTs.csv", row.names = F)
+write.csv(answer_rt_wider, file = "answerRTs.csv", row.names = F)
+
+
+#within ANOVA can't run with missing cells, so remove participants that had outliers removed
+#this loses a lot of data. would probably be better to replace outliers with means, but 
+#i figure we don't really want to use individual question as the within variable anyway
+#see below for analysis with question TYPE as the within variable
+rt_data_no_outliers2 <- rt_data_no_outliers %>%
+  group_by(ParticipantId) %>%
+  filter(n() > 16)
+
+#READING RTs
+
+#make a little plot
+readplot1 <- rt_data_no_outliers2 %>%
+  group_by(ParticipantId, Condition) %>%
+  summarize(overallmean = mean(readRT)) %>%
+  group_by(Condition) %>%
+  summarize(overall_condition_mean = mean(overallmean),
+            se = std.error(overallmean),
+            n = n(),
+            CI = qt(0.975,df=n-1)*se)
+
+ggplot(readplot1, aes(Condition,
+                      overall_condition_mean,
+                      group = 1,
+                      ymin = overall_condition_mean - CI,
+                      ymax = overall_condition_mean + CI)) +
+  theme_classic() + 
+  geom_point(size = 4) +
+  geom_errorbar(width = .15, size = 0.85) + 
+  geom_line(size = 0.85) +
+  labs(y = "Reading RTs (ms)", title = "Read RTs")
+
+
+read_rt_anova <- ezANOVA(rt_data_no_outliers2,
+                      dv = readRT,
+                      wid = ParticipantId,
+                      within = TrialName,
+                      between = Condition,
+                      type = 3,
+                      detailed = TRUE,
+                      return_aov = T
+)
+#get the partial eta-squared too
+aovEffectSize(read_rt_anova, effectSize = "pes")$ANOVA
+
+#no significant effect of condition on read times
+
+#ANSWERING RTs
+
+#make a little plot
+answerplot1 <- rt_data_no_outliers2 %>%
+  group_by(ParticipantId, Condition) %>%
+  summarize(overallmean = mean(AnswerRT)) %>%
+  group_by(Condition) %>%
+  summarize(overall_condition_mean = mean(overallmean),
+            se = std.error(overallmean),
+            n = n(),
+            CI = qt(0.975,df=n-1)*se)
+
+ggplot(answerplot1, aes(Condition,
+                      overall_condition_mean,
+                      group = 1,
+                      ymin = overall_condition_mean - CI,
+                      ymax = overall_condition_mean + CI)) +
+  theme_classic() + 
+  geom_point(size = 4) +
+  geom_errorbar(width = .15, size = 0.85) + 
+  geom_line(size = 0.85) +
+  labs(y = "Answering RTs (ms)", title = "Answer RTs")
+
+answer_rt_anova <- ezANOVA(rt_data_no_outliers2,
+                      dv = AnswerRT,
+                      wid = ParticipantId,
+                      within = TrialName,
+                      between = Condition,
+                      type = 3,
+                      detailed = TRUE,
+                      return_aov = T
+)
+aovEffectSize(answer_rt_anova, effectSize = "pes")$ANOVA
+
+
+```
+
+## Compare conditions for question type (instead of by individual question)
+
+```{r}
+
+trial_type_means <- rt_data_no_outliers %>%
+  group_by(ParticipantId, Condition, TrialType) %>%
+  summarize(mean_readRT = mean(readRT),
+            mean_answerRT = mean(AnswerRT),
+            n = n())
+
+read_rt_type_wider <- trial_type_means %>%
+  select(ParticipantId, Condition, TrialType, mean_readRT) %>%
+  pivot_wider(names_from = TrialType,values_from = mean_readRT, names_prefix="Type")
+answer_rt_type_wider <- trial_type_means %>%
+  select(ParticipantId, Condition, TrialType, mean_answerRT) %>%
+  pivot_wider(names_from = TrialType,values_from = mean_answerRT, names_prefix="Type")
+
+write.csv(read_rt_type_wider, file = "readtypeRTs.csv", row.names = F)
+write.csv(answer_rt_type_wider, file = "answertypeRTs.csv", row.names = F)
+
+#READ RTs
+
+#make the little plot
+superbPlot(read_rt_type_wider,
+    BSFactors   = "Condition", 
+    WSFactors   = "QuestionType(3)", 
+    variables   = c("Type1", "Type2", "Type3"),
+    statistic   = "mean",
+    errorbar    = "CI",
+    gamma       = 0.95,
+    adjustments = list(
+        purpose       = "difference"
+    ),
+    plotStyle = "line",
+    factorOrder = c("Condition", "QuestionType")
+) + 
+theme_classic() + 
+  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1))+
+facet_wrap(vars(QuestionType))+
+labs(y = "Reading RTs (ms)", title = "Read RTs")
+
+read_rt_type_anova <- ezANOVA(trial_type_means,
+                              dv = mean_readRT,
+                              wid = ParticipantId,
+                              within = TrialType,
+                              between = Condition,
+                              type = 3,
+                              detailed = TRUE,
+                              return_aov = T
+)
+
+#get the partial eta-squared too
+aovEffectSize(read_rt_type_anova, effectSize = "pes")$ANOVA
+
+#ANSWER RTx
+
+#make the little plot
+superbPlot(answer_rt_type_wider,
+    BSFactors   = "Condition", 
+    WSFactors   = "QuestionType(3)", 
+    variables   = c("Type1", "Type2", "Type3"),
+    statistic   = "mean",
+    errorbar    = "CI",
+    gamma       = 0.95,
+    adjustments = list(
+        purpose       = "difference"
+    ),
+    plotStyle = "line",
+    factorOrder = c("Condition", "QuestionType")
+) + 
+theme_classic() + 
+theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1))+
+facet_wrap(vars(QuestionType))+
+labs(y = "Answering RTs (ms)", title = "Answer RTs")
+
+answer_rt_type_anova <- ezANOVA(trial_type_means,
+                              dv = mean_answerRT,
+                              wid = ParticipantId,
+                              within = TrialType,
+                              between = Condition,
+                              type = 3,
+                              detailed = TRUE,
+                              return_aov = T
+)
+
+#get the partial eta-squared too
+aovEffectSize(answer_rt_type_anova, effectSize = "pes")$ANOVA
+
+
+
+```
+
